--- a/views/media.pug
+++ b/views/media.pug
@@ -495,6 +495,14 @@ block content
                     else
                         button.subscribe.btn.fw.btn-success.op80.subscribeButton(style="border-radius:4px;") Subscribe (#{subscriberAmount})
 
+                if user
+                    div(style="margin-top:12px")
+                        // TODO: this should create a push subsciption, and it will also send a query to see if it should create a new service worker
+                        h2.share-button.pushNotificationIcon(style="display:inline")
+                            i.share-icon.fas.fa-bell(aria-hidden="true" style="cursor:pointer;font-size:25px;margin-left:0px;color:white;")
+                        h2.share-button.emailNotificationIcon(style="display:inline")
+                            i.share-icon.fas.fa-envelope(aria-hidden="true" style="cursor:pointer;font-size:25px;margin-left:10px;color:white;")
+
                 //br
                 ////- push notification functionality
                 //div.change-size-button
@@ -638,7 +646,7 @@ block content
                     // only do repeat button if it's audio or video
                     if upload.fileType == 'video' || upload.fileType == 'audio'
                         div.change-size-button(style="")
-                            h2.repeat-div(style="opacity:0.4")
+                            h2.repeat-div(style="opacity:0.4; color: white")
                                 i.repeat-icon.fa.fa-repeat(aria-hidden="true" style="cursor:pointer")
 
                 // Upload View Amount
@@ -848,6 +856,122 @@ block extra_js
   script(src='/js/otherNotif.js')
 
   script(src="/js/notificationServiceWorker.js")
+
+  if user
+        script.
+
+            $(document).ready(function(){
+
+              var alreadyHaveEmailNotifsOn = '#{alreadySubscribedForEmails}' == 'true'
+
+              console.log('already have email notis on')
+
+              if (alreadyHaveEmailNotifsOn) {
+                $('.emailNotificationIcon i').css('color', 'white')
+              } else {
+                $('.emailNotificationIcon i').css('color', 'gray')
+              }
+
+              $('.emailNotificationIcon').click(function () {
+                console.log('Email notification icon clicked');
+                var csrf = '#{_csrf}'
+
+                const data = {
+                  _csrf: csrf,
+                  user: '#{user.channelUrl}',
+                  channel: '#{upload.uploader.channelUrl}'
+                }
+
+                $.ajax({
+                  type: 'POST',
+                  url: `/api/subscribeToEmailNotifications`,
+                  data,
+                  success: function (data) {
+
+                    $('.emailNotificationIcon i').css('color', 'white')
+                    let swalText = 'You have subscribed to their email notifications'
+
+                    if (alreadyHaveEmailNotifsOn) {
+                      swalText = 'You have unsubscribed from their email notifications'
+                      $('.emailNotificationIcon i').css('color', 'gray')
+                    }
+
+                    swal(swalText);
+
+                    alreadyHaveEmailNotifsOn = !alreadyHaveEmailNotifsOn;
+
+                    console.log(data);
+
+                    // Shows undefined when at 100%
+
+
+                  },
+                  error: function (err) {
+                    console.log(err);
+                  }
+                });
+              })
+
+              var alreadyHavePushNotifsOn = '#{alreadyHavePushNotifsOn}' == 'true'
+
+              console.log('readl');
+              console.log(alreadyHavePushNotifsOn);
+
+              if (alreadyHavePushNotifsOn) {
+                $('.pushNotificationIcon i').css('color', 'white')
+              } else {
+                  $('.pushNotificationIcon i').css('color', 'gray')
+              }
+
+              if (!('serviceWorker' in navigator) || !('PushManager' in window)) {
+                $('.pushNotificationIcon i').hide()
+              }
+
+
+              $('.pushNotificationIcon').click(function () {
+                console.log('hello');
+                var csrf = '#{_csrf}'
+
+                const data = {
+                  _csrf: csrf,
+                  user: '#{user.channelUrl}',
+                  channel: '#{upload.uploader.channelUrl}'
+                }
+
+                $.ajax({
+                  type: 'POST',
+                  url: `/api/subscribeToPushNotifications`,
+                  data,
+                  success: function (data) {
+
+                    // by default, turn the color grey and load up 'you have subbed' as the text
+                    $('.pushNotificationIcon i').css('color', 'white')
+                    let swalText = 'You have subscribed to their push notifications'
+
+                    // if push notifs already on
+                    if (alreadyHavePushNotifsOn) {
+                      swalText = 'You have unsubscribed from their push notifications'
+                      $('.pushNotificationIcon i').css('color', 'gray')
+                    }
+
+                    swal(swalText);
+
+                    alreadyHavePushNotifsOn = !alreadyHavePushNotifsOn;
+
+                    console.log(data);
+                    //- console.log(data);
+
+                    // Shows undefined when at 100%
+
+
+                  },
+                  error: function (err) {
+                    console.log(err);
+                  }
+                });
+              })
+            })
+
 
   script.
 
