--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -133,6 +133,7 @@ block content
                                 input(type='hidden', name='user', value=`${channel._id}`)
                                 button.btn.btn-primary(name="userChangeValue" value="trustUser" type="submit" ) Trust User
                                 button.btn.btn-danger(name="userChangeValue" value="untrustUser" type="submit" ) Untrust User
+                                p User Trusted: #{user.privs.autoVisibleUpload}
 
                     if user && ( user.role == 'admin' || user.role == 'moderator') && channel.status == 'restricted'
 
