bugfix titles with single quotes

--- a/views/media.pug
+++ b/views/media.pug
@@ -1007,7 +1007,7 @@ block extra_js
           var link = document.createElement('a');
 
 
-          var title = '#{upload.title}'
+          var title = `#{upload.title}`
 
 
           if(player.currentTime == 0 ){
