Added admin page with ref links. Added progress bar on videos longer then 15 minutes

--- a/views/admin/adminOverview.pug
+++ b/views/admin/adminOverview.pug
@@ -2,8 +2,33 @@ extends ../layout
 
 block content
     div
-        div
+        div.col-sm-3
             h2
                 a(href="/admin/users") Users
             h2
                 a(href="/admin/subscriptions") Subscriptions
+            h2
+                a(href="/admin/comments") Comments
+            h2
+                a(href="/admin/uploads") Uploads
+            h2
+                a(href="/admin/dailyStats") Daily stats
+            h2
+                a(href="/admin/reacts") Reacts
+            h2
+                a(href="/admin/siteVisitors") Site Visitors
+            h2
+                a(href="/admin/notifications") Notifications
+            h2
+                a(href="/admin/adminAudit") Admin audit
+            h2
+                a(href="/admin/createSocialPost") Create Social Post
+            h2
+                a(href="/admin/oneOffSocialPost") One off social post
+            h2
+                a(href="/pending") Pending requests
+            h2
+                a(href="/support/emails") Support emails
+            h2
+                a(href="/support/reports") Support reports
+            
