--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -144,6 +144,9 @@ style.
         margin: 0 auto;
         border-radius: 5px;
     }
+    .plyr--full-ui input[type="range"] {
+        color: red;
+    }
 
     .plyr.plyr__video-wrapper {
         background: white;
@@ -162,7 +165,7 @@ style.
         max-width: 405px;
         height: 210px;
         max-height: 210px;
-        border-radius: 7px;
+        
         max-width:100%;
         /*border:1px solid white;*/
     }
@@ -291,6 +294,7 @@ style.
     }
 
     .image-container {
+        height: 220px;
         display:inline-block;
         border:1px solid #5b5a5a;
         margin:0 auto;
@@ -304,7 +308,7 @@ style.
 
         /*transform: scale(1.05) translate(0px, 30px);*/
 
-        transform: scale(1.12);
+        transform: scale(1.05);
 
         -webkit-filter: brightness(120%);
     }
