--- a/views/layout.pug
+++ b/views/layout.pug
@@ -32,6 +32,7 @@ html
     link(rel='manifest', href='/manifest.json')
     link(rel='alternate', type='application/rss+xml', href='/media/recent/rss')
     link(href='https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css', rel='stylesheet')
+    link(href='https://cdn.plyr.io/3.6.2/plyr.css', rel='stylesheet')
     block extra_css
 
     script(src='/js/lib/jquery-3.1.1.min.js')
