--- a/views/viewPartials/uploadThumbnail.pug
+++ b/views/viewPartials/uploadThumbnail.pug
@@ -6,6 +6,7 @@ style.
         height: 10px;
     }
     progress::-moz-progress-bar { background: red; }
+    progress::-webkit-progress-value { background: red; }
 div.holder(style="border:")
     a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:#7d7373;" )
         div.image-container(style="")
