turn on forgotten page

--- a/views/account/login.pug
+++ b/views/account/login.pug
@@ -28,7 +28,10 @@ block content
             | Login
 
           // turn off forgot password, should expose it as an env var
-          //a.btn.btn-link(href='/forgot') Forgot your password?
+
+            //if forgotPasswordFunctionalityOn
+          if 1 == 1
+            a.btn.btn-link(href='/forgot') Forgot your password?
       .form-group
         .col-sm-12
           hr
