--- a/views/media.pug
+++ b/views/media.pug
@@ -498,9 +498,9 @@ block content
                 if user
                     div(style="margin-top:12px")
                         // TODO: this should create a push subsciption, and it will also send a query to see if it should create a new service worker
-                        h2.share-button.pushNotificationIcon(style="display:inline")
+                        h2.pushNotificationIcon(style="display:inline")
                             i.share-icon.fas.fa-bell(aria-hidden="true" style="cursor:pointer;font-size:25px;margin-left:0px;color:white;")
-                        h2.share-button.emailNotificationIcon(style="display:inline")
+                        h2.emailNotificationIcon(style="display:inline")
                             i.share-icon.fas.fa-envelope(aria-hidden="true" style="cursor:pointer;font-size:25px;margin-left:10px;color:white;")
 
                 //br
