--- a/views/account/login.pug
+++ b/views/account/login.pug
@@ -31,7 +31,7 @@ block content
 
             //if forgotPasswordFunctionalityOn
           if 1 == 1
-            a.btn.btn-link(href='/forgot') Forgot your password?
+            a.btn.btn-link.fw(href='/forgot' style="font-size:17px") Forgot your password?
       .form-group
         .col-sm-12
           hr
