finish functionality forgot email

--- a/views/account/login.pug
+++ b/views/account/login.pug
@@ -29,8 +29,8 @@ block content
 
           // turn off forgot password, should expose it as an env var
 
-            //if forgotPasswordFunctionalityOn
-          if 1 == 1
+          // show the forgot your password button
+          if forgotEmailFunctionalityOn
             a.btn.btn-link.fw(href='/forgot' style="font-size:17px") Forgot your password?
       .form-group
         .col-sm-12
