adding delete email button

--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -332,14 +332,19 @@ block content
 
       // IF USER HAS CONFIRMED EMAIL
       if user.email && user.emailConfirmed
-        h2.fw.text-center Confirmed Email
-          br
-        form.form-horizontal(action='/account/email', method='POST')
-          input(type='hidden', name='_csrf', value=_csrf)
-          .form-group
-            label.col-sm-3.control-label.fw(for='email' style='font-size:16px') Email Address
-            .col-sm-7
-              h5.fw(style='font-size:16px') #{user.email}
+        div(style="text-align:center")
+          h2.fw.text-center Confirmed Email
+            br
+
+            h5.fw(style='font-size:19px;margin-top:18px;') Email Address : #{user.email}
+
+          // TODO: Have to finish this, can't think of a good design since I don't want users to spam emails
+          // TODO: also, the frontend is largely in place just needs a swal "Your email was deleted"   
+          //button.fw.btn.btn.btn-danger.btn-sm.center-block.text-center.deleteEmailButton(type='submit' style="margin-top:20px;border-radius:3px;")
+          //  i.fa.fa-pencil
+          //  | Delete
+        br
+        br
 
       // IS USER HAS PENDING CONFIRMATION EMAIL
       if user.email && !user.emailConfirmed
@@ -393,6 +398,38 @@ block content
             | Change Password
 
   script.
+    $(function () {
+
+      var csrf = '#{_csrf}'
+
+      var data = {
+        _csrf: csrf
+      }
+
+      $('.deleteEmailButton').click(function () {
+        $.ajax({
+          type: 'POST',
+          // what is at this backend?
+          url: `/api/deleteUserEmail`,
+          data,
+          success: function (data) {
+            if (data == 'success') {
+              window.location = "/account?to=nt-plus";
+            } else {
+              swal("Something didn't work, please contact NodeTube at ceo@nodetube.live or via the widget in the bottom right corner")
+            }
+            console.log(data);
+          },
+          error: function (err) {
+            console.log(err);
+          }
+        });
+      })
+
+    })
+
+  script.
+
     //.delete-user-thumbnail-form
 
     // capture submit
