--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -83,6 +83,7 @@ block content
                 else
                     button(style="display:inherit;margin:0 auto;border-radius:3px;").fw.subscribe.btn.btn-success Subscribe (#{subscriberAmount})
 
+                // TODO: should support non logged in user where you click it and it says: please login to use this feature
                 if user
                     div(style="margin-top:12px")
                         // TODO: this should create a push subsciption, and it will also send a query to see if it should create a new service worker
@@ -149,7 +150,7 @@ block content
                         //button.undelete-account.btn.btn-warning Undelete Account And Unban Ip
                         if user.role == 'admin'
                             button.delete-ips.btn.btn-warning Undelete All Accounts / Unban All Ips
-                      
+
 
         div
 
@@ -259,59 +260,84 @@ block content
             $(document).ready(function(){
 
               var alreadyHaveEmailNotifsOn = '#{alreadySubscribedForEmails}' == 'true'
-              
+
+              var viewerHasConfirmedEmailAddress = #{viewingUserHasConfirmedEmail}
+
+              console.log('viewer has confirmed address: ' + viewerHasConfirmedEmailAddress);
+
+              // const viewerHasConfirmedEmailAddress = '#{viewingUserHasConfirmedEmail}' == 'true'
+
+
               console.log('already have email notis on')
 
+              // change the color
+              // TODO: this isn't great, should be smarter
               if (alreadyHaveEmailNotifsOn) {
                 $('.emailNotificationIcon i').css('color', 'white')
               } else {
                 $('.emailNotificationIcon i').css('color', 'gray')
               }
 
-              $('.emailNotificationIcon').click(function () {
-                console.log('Email notification icon clicked');
-                var csrf = '#{_csrf}'
 
-                const data = {
-                  _csrf: csrf,
-                  user: '#{user.channelUrl}',
-                  channel: '#{channel.channelUrl}'
-                }
+              // if viewer has already confirmed their email address,
+              // then register them to receive notif emails when they click the icon
+              if(viewerHasConfirmedEmailAddress){
 
-                $.ajax({
-                  type: 'POST',
-                  url: `/api/subscribeToEmailNotifications`,
-                  data,
-                  success: function (data) {
+                $('.emailNotificationIcon').click(function () {
+                  console.log('Email notification icon clicked');
+                  var csrf = '#{_csrf}'
 
-                    $('.emailNotificationIcon i').css('color', 'white')
-                    let swalText = 'You have subscribed to their email notifications'
-
-                    if (alreadyHaveEmailNotifsOn) {
-                      swalText = 'You have unsubscribed from their email notifications'
-                      $('.emailNotificationIcon i').css('color', 'gray')
-                    }
-
-                    swal(swalText);
-
-                    alreadyHaveEmailNotifsOn = !alreadyHaveEmailNotifsOn;
-
-                    console.log(data);
-
-                    // Shows undefined when at 100%
-
-
-                  },
-                  error: function (err) {
-                    console.log(err);
+                  const data = {
+                    _csrf: csrf,
+                    user: '#{user.channelUrl}',
+                    channel: '#{channel.channelUrl}'
                   }
-                });
-              })
+
+                  $.ajax({
+                    type: 'POST',
+                    url: `/api/subscribeToEmailNotifications`,
+                    data,
+                    success: function (data) {
+
+                      $('.emailNotificationIcon i').css('color', 'white')
+                      let swalText = 'You have subscribed to their email notifications'
+
+                      if (alreadyHaveEmailNotifsOn) {
+                        swalText = 'You have unsubscribed from their email notifications'
+                        $('.emailNotificationIcon i').css('color', 'gray')
+                      }
+
+                      swal(swalText);
+
+                      alreadyHaveEmailNotifsOn = !alreadyHaveEmailNotifsOn;
+
+                      console.log(data);
+
+                      // Shows undefined when at 100%
+
+
+                    },
+                    error: function (err) {
+                      console.log(err);
+                    }
+                  });
+                })
+                // if viewer doesn't have confirmed email
+                // (can make smarter (please 'finish confirming') if you want
+              } else {
+                $('.emailNotificationIcon').click(function () {
+                  swal('Please finish confirming your email address on your account page first');
+                })
+
+                // TODO: if pending confirmation, say "please confirmation confirmation
+                // otherwise,
+              }
+
+
+
 
               var alreadyHavePushNotifsOn = '#{alreadyHavePushNotifsOn}' == 'true'
-
-              console.log('readl');
-              console.log(alreadyHavePushNotifsOn);
+              // console.log(alreadyHavePushNotifsOn);
 
               if (alreadyHavePushNotifsOn) {
                 $('.pushNotificationIcon i').css('color', 'white')
@@ -319,6 +345,7 @@ block content
                 $('.pushNotificationIcon i').css('color', 'gray')
               }
 
+              // hide the push notification icon if you can't do service workers or push manager
               if (!('serviceWorker' in navigator) || !('PushManager' in window)) {
                 $('.pushNotificationIcon i').hide()
               }
