allow email sending deletion

--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -416,7 +416,7 @@ block content
             if (data == 'success') {
               // TODO: setup the swal thing here
 
-              window.location = "/account?thumbnailDeleted=true";
+              window.location = "/account?emailDeleted=true";
             } else {
               swal("Something didn't work, please contact NodeTube at ceo@nodetube.live or via the widget in the bottom right corner")
             }
