--- a/views/public/help.pug
+++ b/views/public/help.pug
@@ -26,17 +26,34 @@ block content
             height: 100%
         }
 
+        .embed-container {
+            position: relative;
+            padding-bottom: 56.25%;
+            height: 0;
+            overflow: hidden;
+            max-width: 100%;
+        }
+
+        .embed-container iframe, .embed-container object, .embed-container embed {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
     br
     div.center-block.text-center.col-sm-12.pageContainer(style="overflow-x: hidden;margin-top:-21px;")
 
         div.stillToDonate
 
-            h1.fw(style="margin-bottom:21px") Help Page
+            h1.fw(style="margin-bottom:21px") NewTube Needs Your Help!
 
             //iframe(width='560', height='315', src='https://newtube.app/embed/7KH5xau', frameborder='0', allowfullscreen='')
 
-            .model-box
-                iframe.model(src='https://newtube.app/embed/7KH5xau' frameborder='0' allowfullscreen='')
+            .embed-container
+                iframe(src='https://newtube.app/embed/7KH5xau/' style='border:0')
+
 
 
             p.videoHeader.fw(style="font-size:24px;margin-top:11px;") How To Use NodeTube
