--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -87,10 +87,14 @@ block content
                 if user
                     div(style="margin-top:12px")
                         // TODO: this should create a push subsciption, and it will also send a query to see if it should create a new service worker
-                        h2.share-button.pushNotificationIcon(style="display:inline")
-                            i.share-icon.fas.fa-bell(aria-hidden="true" style="cursor:pointer;font-size:25px;margin-left:0px;color:white;")
-                        h2.share-button.emailNotificationIcon(style="display:inline")
-                            i.share-icon.fas.fa-envelope(aria-hidden="true" style="cursor:pointer;font-size:25px;margin-left:10px;color:white;")
+                        div(style="display:inline-block")
+                            h2.share-button.pushNotificationIcon(style="display:inline")
+                                i.share-icon.fas.fa-bell(aria-hidden="true" style="cursor:pointer;font-size:25px;margin-left:0px;color:white;")
+                            p(style="margin-left:1px") 1
+                        div(style="display:inline-block")
+                            h2.share-button.emailNotificationIcon(style="display:inline")
+                                i.share-icon.fas.fa-envelope(aria-hidden="true" style="cursor:pointer;font-size:25px;margin-left:10px;color:white;")
+                            p(style="margin-left:10px") 1
 
                 // todo: else
                 // let's put an 'else' here and here and show those same buttons
